force-app/main/default/objects/Base_PriceList__c/Base_PriceList__c.object-meta.xml
<CustomObject>
    <label>Base PriceList</label>
    <nameField>
        <label>Base PriceLists Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Base PriceLists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>