force-app/main/default/objects/Base_PriceList__c/fields/Branch_Plant__c.field-meta.xml
<CustomField>
    <fullName>Branch_Plant__c</fullName>
    <label>Branch Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>99666</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>