force-app/main/default/objects/Base_PriceList__c/fields/Discount_Displayed__c.field-meta.xml
<CustomField>
    <fullName>Discount_Displayed__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>