force-app/main/default/objects/Base_PriceList__c/fields/Pricing_Request__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Request__c</fullName>
    <label>Pricing Request</label>
    <referenceTo>Pricing_Request__c</referenceTo>
    <relationshipLabel>Base PriceLists</relationshipLabel>
    <relationshipName>Base_PriceLists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>