force-app/main/default/objects/Base_PriceList__c/fields/Product_Range__c.field-meta.xml
<CustomField>
    <fullName>Product_Range__c</fullName>
    <label>Product Range</label>
    <length>20</length>
    <type>Text</type>
</CustomField>